--- a/main.tex
+++ b/main.tex
@@ -28,17 +28,17 @@
 
 % Include chapters one-by-one
 \include{chapters/00_Introduction.tex}
-\include{chapters/01_Research_Goal.tex}
+% \include{chapters/01_Research_Goal.tex}
 \include{chapters/02_Theoretical_Background.tex}
-\include{chapters/03_Related_Work.tex}
+% \include{chapters/03_Related_Work.tex}
 \include{chapters/04_Preparations_to_Experiments.tex}
 \include{chapters/05_Experiments.tex}
 \include{chapters/06_Summary.tex}
 % \include{chapters/example.tex}
 
-% \printbibliography[title={References},heading=bibintoc]
-\printbibliography[title={Research papers}, heading=bibintoc, keyword={Research_Paper}]
-\printbibliography[title={Additional resources}, heading=bibintoc, keyword={Useful_Link}]
+\printbibliography[title={References},heading=bibintoc]
+% \printbibliography[title={Bibliography}, heading=bibintoc, keyword={Research_Paper}]
+% \printbibliography[title={Additional resources}, heading=bibintoc, keyword={Useful_Link}]
 
 \listoffigures
 \addcontentsline{toc}{chapter}{List of figures}
