--- a/misc/abstract-en.tex
+++ b/misc/abstract-en.tex
@@ -13,7 +13,7 @@ solutions are evaluated, as well as their limitations for newest CPUs and GPUs.
 \noindent
 \textbf{Keywords:} Informatics, parallel programming,
 High-Performance Computing Systems, green computing, NAS Parallel Benchmark,
-Linux Perf, Intel RAPL, NVML, PAPI, Internal Power Sensors, External Power Meters
+Linux Perf, Intel RAPL, NVML, Internal Power Sensors, External Power Meters
 
 % Choose the field from the OECD list:
 % https://en.wikipedia.org/wiki/Fields_of_Science_and_Technology
