--- a/misc/list-of-symbols.tex
+++ b/misc/list-of-symbols.tex
@@ -4,5 +4,47 @@
 % Use pre-defined environment and add new entries one-by-one. Remember
 % to translate non-Polish abbreviations.
 \begin{symbols}
-    GPU    & Graphics Processing Unit \\
+    OS      & Operating System \\
+    CPU     & Central Processing Unit \\
+    GPU     & Graphics Processing Unit \\
+    PSU     & Power Supply Unit \\
+    PCI-E   & Peripheral Component Interconnect Express \\
+    RAPL    & Running Average Power Limit \\
+    NVML    & NVIDIA Management Library \\
+    NASA    & National Aeronautics and Space Administration \\
+    NAS     & NASA Advanced Supercomputing \\
+    NPB     & NAS Parallel Benchmarks \\
+    ICT     & Information and Communication Technology \\
+    MSR     & Model-Specific Register \\
+    RAM     & Random-Access Memory \\
+    DRAM    & Dynamic Random-Access Memory \\
+    VRAM    & Video Random-Access Memory \\
+    API     & Application Programming Interface \\
+    SDK     & Software Development Kit \\
+    SMA     & Sampling Monitoring Approach \\
+    MTSM    & Multi-Threaded Synchronized Monitoring \\
+    PAPI    & Performance Application Programming Interface \\
+    CUDA    & Compute Unified Device Architecture \\
+    NCCL    & NVIDIA Collective Communication Library \\
+    OMP     & Open Multi-Processing \\
+    MPI     & Message Passing Interface \\
+    IS      & Integer Sort \\
+    EP      & Embarassingly Parallel \\
+    CG      & Conjugate Gradient \\
+    MG      & Multi-Grid \\
+    BT      & Block Tri-diagonal solver \\
+    SP      & Scalar Penta-diagonal solver \\
+    LU      & Lower-Upper Gauss-Seidel solver \\
+    FFT     & Fast Fourier Transform \\
+    FFTW    & Fastest Fourier Transform in the West \\
+    MKL-FFT & Math Kernel Library Fast Fourier Transform \\
+\end{symbols}
+
+\begin{symbols}
+    PIP     & Python Index Package \\
+    OpenBLAS & Optimized Basic Linear Algebra Subprograms \\
+    DGEMM   & Double Precision General Matrix Multiply \\
+    PTX     & Parallel Thread Execution \\
+    MAPE    & Mean Absolute Percentage Error \\
+    RMSE    & Root Mean Square Error \\
 \end{symbols}
