--- a/tables/05_Hybrid_isD+spD_energy.tex
+++ b/tables/05_Hybrid_isD+spD_energy.tex
@@ -1,27 +1,26 @@
 \begin{table}[hbt!]
     \rowcolors{1}{Lavender!80!gray}{white}
     \centering
-    \caption{sanna.kask, CPUs, OMP-CPP, bt.C, 1 CPU [POWER DRAW ONLY!!!]}\label{tbl:sanna.kask_CPUs_OMP-CPP_bt.C}
+    \caption{server: \textbf{sanna.kask}, device: \textbf{Hybrid}, implementation: \textbf{OMP-CPP+OMP-CUDA},\\
+    benchmark: \textbf{is.D+sp.D}, data displayed: \textbf{energy used}}\label{tbl:OMP-CPP_OMP-CUDA_Hybrid_isD_spD_energy}
     \setlength{\tabcolsep}{5mm}
     \begin{tblr}{
-        % {|l|c|c|c|c|},
-        % hlines,
         vlines,
         row{1}={font=\bfseries,halign=c,bg=lightgray!30},
-        row{7-8} = {bg = lightgray!20}
+        row{2,5-6,9-10,13-14,17-18,21-22,25-26} = {bg = lightgray!30}
         }
     \hline
-        & \SetCell[c=4]{c} 1 CPU  \\
+        & \SetCell[c=4]{c} Hybrid  \\
     \hline
-        Results from 10 runs                                    & 1 + 4     & 1 + 8     & 2 + 16        & 2 + 32 \\
+        Results from 10 runs (GPU(s) + Threads)                 & 1 + 4     & 2 + 8     & 4 + 16        & 8 + 32  \\
     \hline
         {Avg. Exec\@. time [s]}                                 & 177.298   & 92.61     & 57.096        & 43.868 \\
     \hline
         {Std\@. dev\@. of time [-]}                             & 0.426     & 0.051     & 1.986         & 0.606 \\
     \hline
-        {(Yokogawa) \\ Avg\@. power draw [W]}                   & 1107.349  & 775.824   & 943.249       & 1082.674 \\
+        {(Yokogawa) \\ Avg\@. power draw [W]}                   & 110,94  & 77,86   & 95,151       & 109,841 \\
     \hline
-        {(Yokogawa) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 7.971     & 10.8      & 34.745        & 18.322 \\
+        {(Yokogawa) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 0,8     & 1,084      & 3,509        & 1,936 \\
     \hline
         {(CPU\@: 0) \\ Avg\@. power draw [W]}                   & 8.063     & 5.574     & 3.342         & 2.819 \\
     \hline
@@ -31,37 +30,37 @@
     \hline
         {(CPU\@: 1) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 0.014     & 0.006     & 0.091         & 0.034 \\
     \hline
-        {(GPU\@: 0) \\ Avg\@. power draw [W]}                   & 388.57    & 198.23    & 116.752       & 86.737 \\
+        {(GPU\@: 0) \\ Avg\@. power draw [W]}                   & 38,92    & 19,89    & 11,74       & 8,767 \\
     \hline
-        {(GPU\@: 0) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 4.682     & 1.511     & 4.087         & 1.772 \\
+        {(GPU\@: 0) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 0,468     & 0,153     & 0,41         & 0,174 \\
     \hline
-        {(GPU\@: 1) \\ Avg\@. power draw [W]}                   & 44.88     & 202.496   & 119.074       & 89.021 \\
+        {(GPU\@: 1) \\ Avg\@. power draw [W]}                   & 4,495     & 20,318   & 11,974       & 8,998 \\
     \hline
-        {(GPU\@: 1) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 0.118     & 2.788     & 4.495         & 1.333 \\
+        {(GPU\@: 1) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 0,012     & 0,276     & 0,451         & 0,132 \\
     \hline
-        {(GPU\@: 2) \\ Avg\@. power draw [W]}                   & 23.081    & 11.928    & 120.619       & 89.86 \\
+        {(GPU\@: 2) \\ Avg\@. power draw [W]}                   & 2,312    & 1,197    & 12,129       & 9,083 \\
     \hline
-        {(GPU\@: 2) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 0.326     & 0.134     & 4.217         & 1.658 \\
+        {(GPU\@: 2) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 0,033     & 0,014     & 0,423         & 0,161 \\
     \hline
-        {(GPU\@: 3) \\ Avg\@. power draw [W]}                   & 30.402    & 15.856    & 125.05        & 93.901 \\
+        {(GPU\@: 3) \\ Avg\@. power draw [W]}                   & 3,045    & 1,591    & 12,574        & 9,492 \\
     \hline
-        {(GPU\@: 3) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 0.078     & 0.015     & 4.565         & 1.318 \\
+        {(GPU\@: 3) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 0,008     & 0,002     & 0,458         & 0,125 \\
     \hline
-        {(GPU\@: 4) \\ Avg\@. power draw [W]}                   & 7.145     & 3.73      & 2.339         & 88.469 \\
+        {(GPU\@: 4) \\ Avg\@. power draw [W]}                   & 0,716     & 0,374      & 0,235         & 8,942 \\
     \hline
-        {(GPU\@: 4) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 0.043     & 0.01      & 0.079         & 1.145 \\
+        {(GPU\@: 4) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 0,004     & 0,001      & 0,008         & 0,112 \\
     \hline
-        {(GPU\@: 5) \\ Avg\@. power draw [W]}                   & 32.324    & 17.002    & 11.584        & 90.599 \\
+        {(GPU\@: 5) \\ Avg\@. power draw [W]}                   & 3,238    & 1,706    & 1,165        & 9,158 \\
     \hline
-        {(GPU\@: 5) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 0.202     & 0.075     & 0.369         & 1.458 \\
+        {(GPU\@: 5) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 0,02     & 0,008     & 0,037        & 0,141 \\
     \hline
-        {(GPU\@: 6) \\ Avg\@. power draw [W]}                   & 13.86     & 7.188     & 4.258         & 90.996 \\
+        {(GPU\@: 6) \\ Avg\@. power draw [W]}                   & 1,388     & 0,714     & 0,428         & 9,198 \\
     \hline
-        {(GPU\@: 6) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 0.782     & 0.137     & 0.163         & 1.176 \\
+        {(GPU\@: 6) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 0,078     & 0,014     & 0,016         & 0,114 \\
     \hline
-        {(GPU\@: 7) \\ Avg\@. power draw [W]}                   & 22.213    & 11.703    & 7.965         & 100.56 \\
+        {(GPU\@: 7) \\ Avg\@. power draw [W]}                   & 2,225    & 1,174    & 0,801         & 10,164 \\
     \hline
-        {(GPU\@: 7) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 0.534     & 0.175     & 0.251         & 1.505 \\
+        {(GPU\@: 7) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 0,054     & 0,018     & 0,025         & 0,143 \\
     \hline
     \end{tblr}
 \end{table}
