--- a/tables/05_OMP-CPP_1CPU_btC_energy.tex
+++ b/tables/05_OMP-CPP_1CPU_btC_energy.tex
@@ -12,15 +12,15 @@
     \hline
         & \SetCell[c=4]{c} 1 CPU  \\
     \hline
-        Results from 10 runs                                        & 2 Threads & 10 Threads    & 20 Threads    & 40 Threads \\
+        Results from 10 runs                                        & 1 Thread & 5 Threads    & 10 Threads    & 20 Threads \\
     \hline
         {Avg. Exec\@. time [s]}                                     & 1054.795  & 216.315   & 114.315       & 101.372 \\
     \hline
         {Std\@. dev\@. of time [-]}                                 & 0.966     & 0.243     & 0.121         & 0.158 \\
     \hline
-        {(Yokogawa) \\ Avg\@. energy used [kJ]}                     & 4006.66   & 870.223   & 492.718       & 450.299 \\
+        {(Yokogawa) \\ Avg\@. energy used [kJ]}                     & 400.782   & 87.149    & 49.404        & 45.187 \\
     \hline
-        {(Yokogawa) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 7.695     & 1.038     & 0.644         & 1.35 \\
+        {(Yokogawa) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.778     & 0.104     & 0.067         & 0.123 \\
     \hline
         {(CPU\@: 0) \\ Avg\@. energy used [kJ]}                     & 35.555    & 11.078    & 8.033         & 7.883 \\
     \hline
@@ -30,37 +30,37 @@
     \hline
         {(CPU\@: 1) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.145     & 0.015     & 0.009         & 0.006 \\
     \hline
-        {(GPU\@: 0) \\ Avg\@. energy used [kJ]}                     & 229.411   & 46.824    & 24.642        & 21.805 \\
+        {(GPU\@: 0) \\ Avg\@. energy used [kJ]}                     & 22.947    & 4.688     & 2.469         & 2.186 \\
     \hline
-        {(GPU\@: 0) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 3.68      & 0.131     & 0.224         & 0.051 \\
+        {(GPU\@: 0) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.368     & 0.013     & 0.023         & 0.005 \\
     \hline
-        {(GPU\@: 1) \\ Avg\@. energy used [kJ]}                     & 269.144   & 55.166    & 29.104        & 25.81 \\
+        {(GPU\@: 1) \\ Avg\@. energy used [kJ]}                     & 26.921    & 5.523     & 2.917         & 2.587 \\
     \hline
-        {(GPU\@: 1) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.244     & 0.1       & 0.062         & 0.039 \\
+        {(GPU\@: 1) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.025     & 0.01      & 0.006         & 0.004 \\
     \hline
-        {(GPU\@: 2) \\ Avg\@. energy used [kJ]}                     & 147.218   & 30.298    & 15.676        & 13.795 \\
+        {(GPU\@: 2) \\ Avg\@. energy used [kJ]}                     & 14.725    & 3.034     & 1.571         & 1.383 \\
     \hline
-        {(GPU\@: 2) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 1.259     & 0.253     & 0.278         & 0.16 \\
+        {(GPU\@: 2) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.126     & 0.025     & 0.028         & 0.016 \\
     \hline
-        {(GPU\@: 3) \\ Avg\@. energy used [kJ]}                     & 181.342   & 37.183    & 19.626        & 17.402 \\
+        {(GPU\@: 3) \\ Avg\@. energy used [kJ]}                     & 18.139    & 3.723     & 1.967         & 1.744 \\
     \hline
-        {(GPU\@: 3) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.229     & 0.061     & 0.024         & 0.024 \\
+        {(GPU\@: 3) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.023     & 0.006     & 0.002         & 0.003 \\
     \hline
-        {(GPU\@: 4) \\ Avg\@. energy used [kJ]}                     & 43.328    & 8.905     & 4.698         & 4.142 \\
+        {(GPU\@: 4) \\ Avg\@. energy used [kJ]}                     & 4.334     & 0.892     & 0.471         & 0.415 \\
     \hline
-        {(GPU\@: 4) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.113     & 0.044     & 0.016         & 0.014 \\
+        {(GPU\@: 4) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.011     & 0.005     & 0.002         & 0.001 \\
     \hline
-        {(GPU\@: 5) \\ Avg\@. energy used [kJ]}                     & 194.623   & 39.693    & 20.87         & 18.539 \\
+        {(GPU\@: 5) \\ Avg\@. energy used [kJ]}                     & 19.467    & 3.974     & 2.092         & 1.859 \\
     \hline
-        {(GPU\@: 5) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.432     & 0.212     & 0.13          & 0.112 \\
+        {(GPU\@: 5) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.043     & 0.021     & 0.013         & 0.011 \\
     \hline
-        {(GPU\@: 6) \\ Avg\@. energy used [kJ]}                     & 66.28     & 13.611    & 7.244         & 6.522 \\
+        {(GPU\@: 6) \\ Avg\@. energy used [kJ]}                     & 6.63      & 1.363     & 0.726         & 0.654 \\
     \hline
-        {(GPU\@: 6) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.781     & 0.167     & 0.168         & 0.078 \\
+        {(GPU\@: 6) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.078     & 0.016     & 0.017         & 0.008 \\
     \hline
-        {(GPU\@: 7) \\ Avg\@. energy used [kJ]}                     & 128.383   & 26.278    & 13.769        & 12.27 \\
+        {(GPU\@: 7) \\ Avg\@. energy used [kJ]}                     & 12.841    & 2.631     & 1.38          & 1.23 \\
     \hline
-        {(GPU\@: 7) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 3.336     & 0.312     & 0.358         & 0.318 \\
+        {(GPU\@: 7) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.334     & 0.031     & 0.036         & 0.032 \\
     \hline
     \end{tblr}
 \end{table}
