--- a/tables/05_OMP-CPP_1CPU_isD_energy.tex
+++ b/tables/05_OMP-CPP_1CPU_isD_energy.tex
@@ -16,11 +16,11 @@
     \hline
         {Avg. Exec\@. time [s]}                                     & 649       & 183.121       & 76.25         & 57.389 \\
     \hline
-        {Std\@. dev\@. of time [-]}                                 & 0.277     & 125.881 [FIX] & 0.26          & 0.056 \\
+        {Std\@. dev\@. of time [-]}                                 & 0.277     & 125.881       & 0.26          & 0.056 \\
     \hline
-        {(Yokogawa) \\ Avg\@. energy used [kJ]}                     & 2456.293  & 551.767       & 314.099       & 243.524 \\
+        {(Yokogawa) \\ Avg\@. energy used [kJ]}                     & 245,754  & 56,548       & 31,534       & 24,497 \\
     \hline
-        {(Yokogawa) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 1.005     & 39.423        & 0.918         & 0.27 \\
+        {(Yokogawa) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,101     & 0,03        & 0,09         & 0,024 \\
     \hline
         {(CPU\@: 0) \\ Avg\@. energy used [kJ]}                     & 21.122    & 7.194         & 4.314         & 3.607 \\
     \hline
@@ -30,37 +30,37 @@
     \hline
         {(CPU\@: 1) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.085     & 2.857         & 0.005         & 0.004 \\
     \hline
-        {(GPU\@: 0) \\ Avg\@. energy used [kJ]}                     & 140.435   & 30.388        & 16.493        & 12.449 \\
+        {(GPU\@: 0) \\ Avg\@. energy used [kJ]}                     & 14,05   & 3,113        & 1,655       & 1,251 \\
     \hline
-        {(GPU\@: 0) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.339     & 2.13          & 0.08          & 0.037 \\
+        {(GPU\@: 0) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,034     & 0,009          & 0,008          & 0,004 \\
     \hline
-        {(GPU\@: 1) \\ Avg\@. energy used [kJ]}                     & 165.717   & 35.768        & 19.412        & 14.57 \\
+        {(GPU\@: 1) \\ Avg\@. energy used [kJ]}                     & 16,579   & 3,664        & 1,948        & 1,464 \\
     \hline
-        {(GPU\@: 1) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.136     & 2.548         & 0.076         & 0.014 \\
+        {(GPU\@: 1) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,014     & 0,004         & 0,007         & 0,001 \\
     \hline
-        {(GPU\@: 2) \\ Avg\@. energy used [kJ]}                     & 89.92     & 19.188        & 10.258        & 7.879 \\
+        {(GPU\@: 2) \\ Avg\@. energy used [kJ]}                     & 8,996     & 1,966        & 1,03        & 0,792 \\
     \hline
-        {(GPU\@: 2) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 1.032     & 1.278         & 0.132         & 0.089 \\
+        {(GPU\@: 2) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,103     & 0,021         & 0,013         & 0,009 \\
     \hline
-        {(GPU\@: 3) \\ Avg\@. energy used [kJ]}                     & 111.756   & 24.115        & 13.076        & 9.841 \\
+        {(GPU\@: 3) \\ Avg\@. energy used [kJ]}                     & 11,18   & 2,47        & 1,312       & 0,988 \\
     \hline
-        {(GPU\@: 3) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.164     & 1.702         & 0.044         & 0.015 \\
+        {(GPU\@: 3) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,016     & 0,004         & 0,004         & 0,001 \\
     \hline
-        {(GPU\@: 4) \\ Avg\@. energy used [kJ]}                     & 26.621    & 5.753         & 3.118         & 2.333 \\
+        {(GPU\@: 4) \\ Avg\@. energy used [kJ]}                     & 2,663    & 0,589         & 0,313         & 0,234 \\
     \hline
-        {(GPU\@: 4) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.103     & 0.403         & 0.019         & 0.012 \\
+        {(GPU\@: 4) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,01     & 0,002         & 0,002         & 0,001 \\
     \hline
-        {(GPU\@: 5) \\ Avg\@. energy used [kJ]}                     & 119.006   & 25.858        & 13.987        & 10.532 \\
+        {(GPU\@: 5) \\ Avg\@. energy used [kJ]}                     & 11,906   & 2,649        & 1,403        & 1,058 \\
     \hline
-        {(GPU\@: 5) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.4       & 1.797         & 0.079         & 0.074 \\
+        {(GPU\@: 5) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,04       & 0,015         & 0,008         & 0,008 \\
     \hline
-        {(GPU\@: 6) \\ Avg\@. energy used [kJ]}                     & 42.092    & 8.705         & 4.763         & 3.598 \\
+        {(GPU\@: 6) \\ Avg\@. energy used [kJ]}                     & 4,211    & 0,892         & 0,478         & 0,362 \\
     \hline
-        {(GPU\@: 6) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 1.032     & 0.638         & 0.071         & 0.068 \\
+        {(GPU\@: 6) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,103     & 0,011         & 0,007         & 0,007 \\
     \hline
-        {(GPU\@: 7) \\ Avg\@. energy used [kJ]}                     & 80.122    & 16.92         & 9.22          & 7.185 \\
+        {(GPU\@: 7) \\ Avg\@. energy used [kJ]}                     & 8,016    & 1,734         & 0,925          & 0,722 \\
     \hline
-        {(GPU\@: 7) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.779     & 1.135         & 0.143         & 0.082 \\
+        {(GPU\@: 7) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,078     & 0,014         & 0,014         & 0,008 \\
     \hline
     \end{tblr}
 \end{table}
