--- a/tables/05_OMP-CPP_1CPU_isD_power.tex
+++ b/tables/05_OMP-CPP_1CPU_isD_power.tex
@@ -16,7 +16,7 @@
     \hline
         {Avg. Exec\@. time [s]}                                 & 649       & 183.121       & 76.25         & 57.389 \\
     \hline
-        {Std\@. dev\@. of time [-]}                             & 0.277     & 125.881 [FIX] & 0.26          & 0.056 \\
+        {Std\@. dev\@. of time [-]}                             & 0.277     & 125.881       & 0.26          & 0.056 \\
     \hline
         {(Yokogawa) \\ Avg\@. power draw [W]}                   & 378.666   & 394.555       & 413.561       & 426.861 \\
     \hline
