--- a/tables/05_OMP-CPP_2CPUs_btC_power.tex
+++ b/tables/05_OMP-CPP_2CPUs_btC_power.tex
@@ -16,7 +16,7 @@
     \hline
         {Avg. Exec\@. time [s]}                                 & 861.634   & 114.56        & 69.86         & 64.855 \\
     \hline
-        {Std\@. dev\@. of time [-]}    [FIX THIS RUN!!!]        & 107.726   & 1.843         & 0.395         & 0.979 \\
+        {Std\@. dev\@. of time [-]}                             & 107.726   & 1.843         & 0.395         & 0.979 \\
     \hline
         {(Yokogawa) \\ Avg\@. power draw [W]}                   & 382.827   & 432.746       & 477.802       & 500.032 \\
     \hline
