--- a/config/bibliography.bib
+++ b/config/bibliography.bib
@@ -368,7 +368,7 @@
 @misc{NASA_Advanced_Supercomputing,
   author   = {NASA},
   title    = {NAS Parallel Benchmarks},
-  keywords = {Useful_Link},
+  keywords = {Research_Paper},
   url      = {https://www.nas.nasa.gov/software/npb.html},
   abstract = {The NAS Parallel Benchmarks (NPB) are a small set of programs
   designed to help evaluate the performance of parallel supercomputers. The
@@ -386,7 +386,7 @@
 @misc{GitHub_intel/yoko-tool,
   author   = {Bityutskiy, Artem and Laakso, Antti and Correia, Helia},
   title    = {Yokotool},
-  keywords = {Useful_Link},
+  keywords = {Research_Paper},
   url      = {https://github.com/intel/yoko-tool},
   abstract = {Command-line tool for controlling Yokogawa power meters in Linux}
 }
@@ -394,125 +394,125 @@
 @misc{Energy_Consumption_of_ICT,
   author   = {The Parliamentary Office of Science and Technology},
   title    = {Energy Consumption of ICT},
-  keywords = {Useful_Link},
+  keywords = {Research_Paper},
   url      = {https://researchbriefings.files.parliament.uk/documents/POST-PN-0677/POST-PN-0677.pdf}
 }
 
 @misc{RAPL_Reporting,
   author   = {Intel},
   title    = {Running Average Power Limit Energy Reporting},
-  keywords = {Useful_Link},
+  keywords = {Research_Paper},
   url      = {https://www.intel.com/content/www/us/en/developer/articles/technical/software-security-guidance/advisory-guidance/running-average-power-limit-energy-reporting.html}
 }
 
 @misc{NVML,
   author   = {NVIDIA},
   title    = {NVIDIA Management Library (NVML)},
-  keywords = {Useful_Link},
+  keywords = {Research_Paper},
   url      = {https://developer.nvidia.com/nvidia-management-library-nvml}
 }
 
 @misc{Yokogawa_Producent_Page,
   author   = {Yokogawa},
   title    = {WT300E Digital Power Analyzer},
-  keywords = {Useful_Link},
+  keywords = {Research_Paper},
   url      = {https://tmi.yokogawa.com/solutions/products/power-analyzers/digital-power-meter-wt300e/#Documents-Downloads}
 }
 
 @misc{Yokogawa_Meter_Series_Specifications,
   author   = {Yokogawa},
   title    = {WT300E Series Digital Power Meter},
-  keywords = {Useful_Link},
+  keywords = {Research_Paper},
   url      = {https://cdn.tmi.yokogawa.com/1/2562/files/BUWT300E-01EN.pdf}
 }
 
 @misc{NVML_Reference_Manual,
   author   = {NVIDIA},
   title    = {NVML API Reference Guide},
-  keywords = {Useful_Link},
+  keywords = {Research_Paper},
   url      = {https://docs.nvidia.com/deploy/nvml-api/index.html}
 }
 
 @misc{Intel_Xeon_Phi_Coprocessor_Developer,
   author   = {Intel},
   title    = {Intel® Xeon Phi™ Coprocessor DEVELOPER'S QUICK START GUIDE},
-  keywords = {Useful_Link},
+  keywords = {Research_Paper},
   url      = {https://www.intel.com/content/dam/develop/external/us/en/documents/intel-xeon-phi-coprocessor-quick-start-developers-guide.pdf}
 }
 
 @misc{NVIDIA_SMI,
   author   = {NVIDIA},
   title    = {System Management Interface SMI},
-  keywords = {Useful_Link},
+  keywords = {Research_Paper},
   url      = {https://developer.nvidia.com/nvidia-system-management-interface}
 }
 
 @misc{PAPI_CUDA,
   author   = {NVIDIA},
   title    = {PAPI CUDA Component},
-  keywords = {Useful_Link},
+  keywords = {Research_Paper},
   url      = {https://developer.nvidia.com/papi-cuda-component}
 }
 
 @misc{Pthreads,
   author   = {Michael Kerrisk},
   title    = {Pthreads - Linux manual page},
-  keywords = {Useful_Link},
+  keywords = {Research_Paper},
   url      = {https://man7.org/linux/man-pages/man7/pthreads.7.html}
 }
 
 @misc{OpenMP,
   author   = {OpenMP},
   title    = {OpenMP Reference Guides},
-  keywords = {Useful_Link},
+  keywords = {Research_Paper},
   url      = {https://www.openmp.org/resources/refguides/}
 }
 
 @misc{NVIDIA_Parallel_Thread_Execution,
   author   = {NVIDIA},
   title    = {Parallel Thread Execution ISA Version 8.2},
-  keywords = {Useful_Link},
+  keywords = {Research_Paper},
   url      = {https://docs.nvidia.com/cuda/parallel-thread-execution/index.html}
 }
 
 @misc{NVIDIA_NVCC,
   author   = {NVIDIA},
   title    = {NVIDIA CUDA Compiler Driver NVCC},
-  keywords = {Useful_Link},
+  keywords = {Research_Paper},
   url      = {https://docs.nvidia.com/cuda/cuda-compiler-driver-nvcc/}
 }
 @misc{K20Power,
   author   = {Martin Burtscher},
   title    = {K20Power v1.1},
-  keywords = {Useful_Link},
+  keywords = {Research_Paper},
   url      = {https://userweb.cs.txstate.edu/~burtscher/research/K20power/}
 }
 
 @misc{LonestarGPU,
   author   = {ISS Group at the University of Texas},
   title    = {LonestarGPU},
-  keywords = {Useful_Link},
+  keywords = {Research_Paper},
   url      = {https://iss.oden.utexas.edu/?p=projects/galois/lonestargpu}
 }
 
 @misc{EnergyStar,
   author   = {ICR Polska},
   title    = {EnergyStar - ICR POLAND - testing and certification},
-  keywords = {Useful_Link},
+  keywords = {Research_Paper},
   url      = {https://icrpolska.com/en/energystar/}
 }
 
 @misc{SPEC,
   author   = {SPEC},
   title    = {SPECpower and Performance Committee},
-  keywords = {Useful_Link},
+  keywords = {Research_Paper},
   url      = {https://www.spec.org/power/}
 }
 
 @misc{IEC,
   author   = {International Electrotechnical Commission},
   title    = {IEC 62301:2011 | IEC Webstore | energy efficiency, smart city, standby power},
-  keywords = {Useful_Link},
+  keywords = {Research_Paper},
   url      = {https://webstore.iec.ch/publication/6789},
   abstract = {IEC 62301:2011 specifies methods of measurement of electrical
   power consumption in standby mode(s) and other low power modes (off mode and
@@ -545,35 +545,35 @@
 @misc{iTeh,
   author   = {iTeh Standards},
   title    = {Electrical and electronic household and office equipment - Measurement of low power consumption},
-  keywords = {Useful_Link},
+  keywords = {Research_Paper},
   url      = {https://standards.iteh.ai/catalog/standards/clc/371d2d67-a439-4f20-96f0-02675496fd03/en-50564-2011}
 }
 
 @misc{Linux_taskset,
   author   = {Linux},
   title    = {"taskset" - Linux manual page},
-  keywords = {Useful_Link},
+  keywords = {Research_Paper},
   url      = {https://man7.org/linux/man-pages/man1/taskset.1.html}
 }
 
 @misc{Horovod_IDRIS,
   author   = {The Institute for Development and Resources in Intensive Scientific Computing},
   title    = {Horovod: Multi-GPU and multi-node data parallelism},
-  keywords = {Useful_Link},
+  keywords = {Research_Paper},
   url      = {http://www.idris.fr/eng/jean-zay/gpu/jean-zay-gpu-hvd-tf-multi-eng.html}
 }
 
 @misc{Google_Machine_Learning_Crash_Course,
   author   = {Google},
   title    = {Machine Learning Crash Course with TensorFlow APIs},
-  keywords = {Useful_Link},
+  keywords = {Research_Paper},
   url      = {https://developers.google.com/machine-learning/crash-course}
 }
 
 @misc{Kaggle,
   author   = {Kaggle},
   title    = {Kaggle: Your Machine Learning and Data Science Community},
-  keywords = {Useful_Link},
+  keywords = {Research_Paper},
   url      = {https://www.kaggle.com/}
 }
 
@@ -582,21 +582,21 @@
   title    = {Birds 525 Species - Image Classification},
   year     = {2023},
   month    = {5},
-  keywords = {Useful_Link},
+  keywords = {Research_Paper},
   url      = {https://www.kaggle.com/datasets/gpiosenka/100-bird-species}
 }
 
 @misc{Horovod,
   author   = {Uber Technologies},
   title    = {Horovod documentation},
-  keywords = {Useful_Link},
+  keywords = {Research_Paper},
   url      = {https://horovod.readthedocs.io/en/latest/index.html/}
 }
 
 @misc{WattsUp_Quick_Reference_Guide,
   author   = {Electronic Educational Devices},
   title    = {WattsUp? Operators Manual},
-  keywords = {Useful_Link},
+  keywords = {Research_Paper},
   url      = {https://arcb.csc.ncsu.edu/~mueller/cluster/arc/wattsup/metertools-1.0.0/docs/meters/wattsup/manual.pdf}
 }
 
@@ -604,13 +604,13 @@
   author   = {Python},
   title    = {"os" — Miscellaneous operating system interfaces},
   year     = {2023},
-  keywords = {Useful_Link},
+  keywords = {Research_Paper},
   url      = {https://docs.python.org/3/library/signal.html?highlight=signal#module-signal}
 }
 
 @misc{Python_signal_module,
   author   = {Python},
   title    = {"signal" - Set handlers for asynchronous events},
-  keywords = {Useful_Link},
+  keywords = {Research_Paper},
   url      = {https://docs.python.org/3/library/os.html}
 }
