--- a/tables/05_Hybrid_btC+luD_energy.tex
+++ b/tables/05_Hybrid_btC+luD_energy.tex
@@ -1,27 +1,26 @@
 \begin{table}[hbt!]
     \rowcolors{1}{Lavender!80!gray}{white}
     \centering
-    \caption{sanna.kask, CPUs, OMP-CPP, bt.C, 1 CPU [POWER DRAW ONLY!!!]}\label{tbl:sanna.kask_CPUs_OMP-CPP_bt.C}
+    \caption{server: \textbf{sanna.kask}, device: \textbf{Hybrid}, implementation: \textbf{OMP-CPP+OMP-CUDA},\\
+    benchmark: \textbf{bt.C+lu.D}, data displayed: \textbf{energy used}}\label{tbl:OMP-CPP_OMP-CUDA_Hybrid_btC_luD_energy}
     \setlength{\tabcolsep}{5mm}
     \begin{tblr}{
-        % {|l|c|c|c|c|},
-        % hlines,
         vlines,
         row{1}={font=\bfseries,halign=c,bg=lightgray!30},
-        row{7-8} = {bg = lightgray!20}
+        row{2,5-6,9-10,13-14,17-18,21-22,25-26} = {bg = lightgray!30}
         }
     \hline
-        & \SetCell[c=4]{c} 1 CPU  \\
+        & \SetCell[c=4]{c} Hybrid  \\
     \hline
-        Results from 10 runs                                    & 1 + 4     & 1 + 8     & 2 + 16        & 2 + 32 \\
+        Results from 10 runs (GPU(s) + Threads)                 & 1 + 4     & 2 + 8     & 4 + 16        & 8 + 32  \\
     \hline
         {Avg. Exec\@. time [s]}                                 & 269.755   & 139.845   & 86.92         & 82.297 \\
     \hline
         {Std\@. dev\@. of time [-]}                             & 2.918     & 0.269     & 0.441         & 0.692 \\
     \hline
-        {(Yokogawa) \\ Avg\@. power draw [W]}                   & 1691.859  & 1184.423  & 1449.736      & 2120.11 \\
+        {(Yokogawa) \\ Avg\@. power draw [W]}                   & 169,403  & 118,735  & 145,829      & 213,561 \\
     \hline
-        {(Yokogawa) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 25.936    & 11.657    & 9.632         & 24.321 \\
+        {(Yokogawa) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 2,612    & 1,185    & 0,977         & 2,49 \\
     \hline
         {(CPU\@: 0) \\ Avg\@. power draw [W]}                   & 13.829    & 9.895     & 5.734         & 6.043 \\
     \hline
@@ -31,37 +30,37 @@
     \hline
         {(CPU\@: 1) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 0.069     & 0.01      & 0.022         & 0.04 \\
     \hline
-        {(GPU\@: 0) \\ Avg\@. power draw [W]}                   & 592.662   & 305.012   & 176.999       & 166.642 \\
+        {(GPU\@: 0) \\ Avg\@. power draw [W]}                   & 59,331   & 30,574   & 17,765       & 16,743 \\
     \hline
-        {(GPU\@: 0) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 1.741     & 0.797     & 0.925         & 1.201 \\
+        {(GPU\@: 0) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 0,176     & 0,077    & 0,092         & 0,126 \\
     \hline
-        {(GPU\@: 1) \\ Avg\@. power draw [W]}                   & 67.511    & 312.036   & 183.853       & 172.009 \\
+        {(GPU\@: 1) \\ Avg\@. power draw [W]}                   & 6,759    & 31,278   & 18,453       & 17,282 \\
     \hline
-        {(GPU\@: 1) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 0.688     & 4.105     & 0.934         & 1.705 \\
+        {(GPU\@: 1) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 0,069     & 0,413     & 0,092         & 0,176 \\
     \hline
-        {(GPU\@: 2) \\ Avg\@. power draw [W]}                   & 36.043    & 18.453    & 185.492       & 174.837 \\
+        {(GPU\@: 2) \\ Avg\@. power draw [W]}                   & 3,608    & 1,85    & 18,618      & 17,566 \\
     \hline
-        {(GPU\@: 2) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 0.542     & 0.197     & 1.65          & 1.268 \\
+        {(GPU\@: 2) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 0,054    & 0,02     & 0,165          & 0,137 \\
     \hline
-        {(GPU\@: 3) \\ Avg\@. power draw [W]}                   & 46.436    & 24.122    & 191.774       & 179.539 \\
+        {(GPU\@: 3) \\ Avg\@. power draw [W]}                   & 4,649    & 2,418    & 19,248       & 18,039 \\
     \hline
-        {(GPU\@: 3) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 0.55      & 0.045     & 0.955         & 1.596 \\
+        {(GPU\@: 3) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 0,055      & 0,004     & 0,097         & 0,165 \\
     \hline
-        {(GPU\@: 4) \\ Avg\@. power draw [W]}                   & 10.937    & 5.746     & 3.951         & 171.944 \\
+        {(GPU\@: 4) \\ Avg\@. power draw [W]}                   & 1,095    & 0,576     & 0,397         & 17,276 \\
     \hline
-        {(GPU\@: 4) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 0.117     & 0.022     & 0.047         & 1.744 \\
+        {(GPU\@: 4) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 0,012     & 0,002     & 0,005         & 0,18 \\
     \hline
-        {(GPU\@: 5) \\ Avg\@. power draw [W]}                   & 49.769    & 26.243    & 18.237        & 173.872 \\
+        {(GPU\@: 5) \\ Avg\@. power draw [W]}                   & 4,982    & 2,63    & 1,83        & 17,469 \\
     \hline
-        {(GPU\@: 5) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 0.813     & 0.177     & 0.18          & 1.815 \\
+        {(GPU\@: 5) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 0,082     & 0,018     & 0,018          & 0,188 \\
     \hline
-        {(GPU\@: 6) \\ Avg\@. power draw [W]}                   & 21.409    & 11.628    & 7.377         & 176.962 \\
+        {(GPU\@: 6) \\ Avg\@. power draw [W]}                   & 2,143    & 1,166    & 0,74         & 17,78 \\
     \hline
-        {(GPU\@: 6) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 0.489     & 0.265     & 0.426         & 1.685 \\
+        {(GPU\@: 6) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 0,049     & 0,026     & 0,043        & 0,174 \\
     \hline
-        {(GPU\@: 7) \\ Avg\@. power draw [W]}                   & 34.101    & 17.458    & 11.503        & 196.302 \\
+        {(GPU\@: 7) \\ Avg\@. power draw [W]}                   & 3,414    & 1,75    & 1,154        & 19,723 \\
     \hline
-        {(GPU\@: 7) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 0.555     & 0.141     & 0.171         & 2.252 \\
+        {(GPU\@: 7) \\ Std\@. dev\@. of avg\@. power draw [-]}  & 0,056    & 0,014     & 0,017         & 0,228 \\
     \hline
     \end{tblr}
 \end{table}
