--- a/tables/05_OMP-CPP_2CPUs_btC_energy.tex
+++ b/tables/05_OMP-CPP_2CPUs_btC_energy.tex
@@ -16,9 +16,9 @@
     \hline
         {Avg. Exec\@. time [s]}                                     & 861.634   & 114.56        & 69.86         & 64.855 \\
     \hline
-        {Std\@. dev\@. of time [-]}    [FIX THIS RUN!!!]            & 107.726   & 1.843         & 0.395         & 0.979 \\
+        {Std\@. dev\@. of time [-]}                                 & 107.726   & 1.843         & 0.395         & 0.979 \\
     \hline
-        {(Yokogawa) \\ Avg\@. energy used [kJ]}                     & 3295.871  & 494.361       & 332.072       & 322.504 \\
+        {(Yokogawa) \\ Avg\@. energy used [kJ]}                     & 365,73  & 49,575       & 33,379       & 32,428 \\
     \hline
         {(Yokogawa) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 400.501   & 7.389         & 1.791         & 3.862 \\
     \hline
@@ -30,37 +30,37 @@
     \hline
         {(CPU\@: 1) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 2.456     & 0.07          & 0.024         & 0.05 \\
     \hline
-        {(GPU\@: 0) \\ Avg\@. energy used [kJ]}                     & 186.364   & 24.756        & 15.03         & 14.025 \\
+        {(GPU\@: 0) \\ Avg\@. energy used [kJ]}                     & 20,668   & 2,482        & 1,509         & 1,408 \\
     \hline
-        {(GPU\@: 0) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 23.459    & 0.497         & 0.076         & 0.223 \\
+        {(GPU\@: 0) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,108    & 0,05         & 0,007         & 0,022 \\
     \hline
-        {(GPU\@: 1) \\ Avg\@. energy used [kJ]}                     & 220.154   & 29.199        & 17.802        & 16.502 \\
+        {(GPU\@: 1) \\ Avg\@. energy used [kJ]}                     & 24,415   & 2,927        & 1,787        & 1,657 \\
     \hline
-        {(GPU\@: 1) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 27.671    & 0.462         & 0.108         & 0.244 \\
+        {(GPU\@: 1) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,055    & 0,046         & 0,011         & 0,024 \\
     \hline
-        {(GPU\@: 2) \\ Avg\@. energy used [kJ]}                     & 120.713   & 15.576        & 9.536         & 8.869 \\
+        {(GPU\@: 2) \\ Avg\@. energy used [kJ]}                     & 13,384   & 1,562       & 0,957         & 0,891 \\
     \hline
-        {(GPU\@: 2) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 15.416    & 0.338         & 0.118         & 0.162 \\
+        {(GPU\@: 2) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,163    & 0,034         & 0,012         & 0,016 \\
     \hline
-        {(GPU\@: 3) \\ Avg\@. energy used [kJ]}                     & 148.274   & 19.633        & 11.976        & 11.112 \\
+        {(GPU\@: 3) \\ Avg\@. energy used [kJ]}                     & 16,444   & 1,968        & 1,202        & 1,116 \\
     \hline
-        {(GPU\@: 3) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 18.579    & 0.31          & 0.062         & 0.166 \\
+        {(GPU\@: 3) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,032    & 0,031          & 0,006         & 0,017 \\
     \hline
-        {(GPU\@: 4) \\ Avg\@. energy used [kJ]}                     & 35.244    & 4.696         & 2.859         & 2.651 \\
+        {(GPU\@: 4) \\ Avg\@. energy used [kJ]}                     & 3,908    & 0,471         & 0,287         & 0,266 \\
     \hline
-        {(GPU\@: 4) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 4.433     & 0.062         & 0.015         & 0.042 \\
+        {(GPU\@: 4) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,006     & 0,006         & 0,002         & 0,004 \\
     \hline
-        {(GPU\@: 5) \\ Avg\@. energy used [kJ]}                     & 158.629   & 20.978        & 12.927        & 12.039 \\
+        {(GPU\@: 5) \\ Avg\@. energy used [kJ]}                     & 17,591   & 2,103        & 1,298        & 1,209 \\
     \hline
-        {(GPU\@: 5) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 20.046    & 0.36          & 0.076         & 0.208 \\
+        {(GPU\@: 5) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,064    & 0,036          & 0,007         & 0,021 \\
     \hline
-        {(GPU\@: 6) \\ Avg\@. energy used [kJ]}                     & 55.475    & 7.378         & 4.513         & 4.202 \\
+        {(GPU\@: 6) \\ Avg\@. energy used [kJ]}                     & 6,149    & 0,74         & 0,453         & 0,422 \\
     \hline
-        {(GPU\@: 6) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 7.402     & 0.176         & 0.074         & 0.077 \\
+        {(GPU\@: 6) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,179     & 0,018         & 0,007         & 0,008 \\
     \hline
-        {(GPU\@: 7) \\ Avg\@. energy used [kJ]}                     & 105.709   & 13.866        & 8.276         & 7.738 \\
+        {(GPU\@: 7) \\ Avg\@. energy used [kJ]}                     & 11,733   & 1,39        & 0,831         & 0,777 \\
     \hline
-        {(GPU\@: 7) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 12.938    & 0.28          & 0.107         & 0.143 \\
+        {(GPU\@: 7) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,351    & 0,028          & 0,011         & 0,014 \\
     \hline
     \end{tblr}
 \end{table}
