--- a/tables/05_OMP-CUDA_spD_energy.tex
+++ b/tables/05_OMP-CUDA_spD_energy.tex
@@ -2,7 +2,7 @@
     \rowcolors{1}{Lavender!80!gray}{white}
     \centering
     \caption{server: \textbf{sanna.kask}, device: \textbf{GPUs}, implementation: \textbf{OMP-CUDA},\\
-    benchmark: \textbf{sp.D}, data displayed: \textbf{power draw}}\label{tbl:OMP-CUDA_GPUs_spD_power}
+    benchmark: \textbf{sp.D}, data displayed: \textbf{energy used}}\label{tbl:OMP-CUDA_GPUs_spD_energy}
     \setlength{\tabcolsep}{5mm}
     \begin{tblr}{
         vlines,
@@ -18,9 +18,9 @@
     \hline
         {Std\@. dev\@. of time [-]}                                 & 0.128     & 0.122     & 0.073     & 0.215 \\
     \hline
-        {(Yokogawa) \\ Avg\@. energy used [kJ]}                     & 1342.784  & 1791.973  & 3299.12   & 5511.951 \\
+        {(Yokogawa) \\ Avg\@. energy used [kJ]}                     & 134,471  & 179,478  & 330,635   & 552,51 \\
     \hline
-        {(Yokogawa) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 6.041     & 9.265     & 76.064    & 46.177 \\
+        {(Yokogawa) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,599     & 0,912     & 7,618    & 4,649 \\
     \hline
         {(CPU\@: 0) \\ Avg\@. energy used [kJ]}                     & 7.409     & 8.244     & 8.341     & 10.271 \\
     \hline
@@ -30,37 +30,37 @@
     \hline
         {(CPU\@: 1) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.024     & 0.014     & 0.023     & 0.019 \\
     \hline
-        {(GPU\@: 0) \\ Avg\@. energy used [kJ]}                     & 489.572   & 494.199   & 461.18    & 460.628 \\
+        {(GPU\@: 0) \\ Avg\@. energy used [kJ]}                     & 49,021   & 49,486   & 46,18    & 46,152 \\
     \hline
-        {(GPU\@: 0) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 5.393     & 3.843     & 1.73      & 1.505 \\
+        {(GPU\@: 0) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,54     & 0,386     & 0,172      & 0,139 \\
     \hline
-        {(GPU\@: 1) \\ Avg\@. energy used [kJ]}                     & 56.489    & 503.321   & 477.823   & 474.287 \\
+        {(GPU\@: 1) \\ Avg\@. energy used [kJ]}                     & 5,656    & 50,4   & 47,846   & 47,52 \\
     \hline
-        {(GPU\@: 1) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.106     & 6.968     & 0.946     & 2.763 \\
+        {(GPU\@: 1) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,011     & 0,696    & 0,089     & 0,266 \\
     \hline
-        {(GPU\@: 2) \\ Avg\@. energy used [kJ]}                     & 29.904    & 29.816    & 480.865   & 478.884 \\
+        {(GPU\@: 2) \\ Avg\@. energy used [kJ]}                     & 2,994    & 2,986    & 48,151   & 47,981 \\
     \hline
-        {(GPU\@: 2) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.401     & 0.409     & 2.975     & 2.195 \\
+        {(GPU\@: 2) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,04     & 0,041     & 0,298     & 0,212 \\
     \hline
-        {(GPU\@: 3) \\ Avg\@. energy used [kJ]}                     & 38.288    & 38.301    & 492.356   & 492.735 \\
+        {(GPU\@: 3) \\ Avg\@. energy used [kJ]}                     & 3,834    & 3,835    & 49,302   & 49,369 \\
     \hline
-        {(GPU\@: 3) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.065     & 0.054     & 2.248     & 1.492 \\
+        {(GPU\@: 3) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,007     & 0,005     & 0,224     & 0,145 \\
     \hline
-        {(GPU\@: 4) \\ Avg\@. energy used [kJ]}                     & 8,991     & 8.945     & 9.008     & 470.776 \\
+        {(GPU\@: 4) \\ Avg\@. energy used [kJ]}                     & 0,9     & 0,896    & 0,902     & 47,169 \\
     \hline
-        {(GPU\@: 4) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.025     & 0.047     & 0.031     & 1.238 \\
+        {(GPU\@: 4) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,002     & 0,005     & 0,003     & 0,119 \\
     \hline
-        {(GPU\@: 5) \\ Avg\@. energy used [kJ]}                     & 41.052    & 41.495    & 45.549    & 475.121 \\
+        {(GPU\@: 5) \\ Avg\@. energy used [kJ]}                     & 4,111    & 4,155    & 4,561    & 47,604 \\
     \hline
-        {(GPU\@: 5) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.355     & 0.168     & 0.338     & 0.346 \\
+        {(GPU\@: 5) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,036     & 0,017     & 0,034     & 0,032 \\
     \hline
-        {(GPU\@: 6) \\ Avg\@. energy used [kJ]}                     & 16.932    & 17.57     & 15.816    & 488.474 \\
+        {(GPU\@: 6) \\ Avg\@. energy used [kJ]}                     & 1,695    & 1,759     & 1,584    & 48,942 \\
     \hline
-        {(GPU\@: 6) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.397     & 0.2       & 0.386     & 3.102 \\
+        {(GPU\@: 6) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,04    & 0,02       & 0,038     & 0,296 \\
     \hline
-        {(GPU\@: 7) \\ Avg\@. energy used [kJ]}                     & 29.904    & 29.6      & 31.409    & 544.438 \\
+        {(GPU\@: 7) \\ Avg\@. energy used [kJ]}                     & 2,994    & 2,964     & 3,145    & 54,549 \\
     \hline
-        {(GPU\@: 7) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0.511     & 0.329     & 0.358     & 3.62 \\
+        {(GPU\@: 7) \\ Std\@. dev\@. of avg\@. energy used [-]}     & 0,051     & 0,033     & 0,036     & 0,353 \\
     \hline
     \end{tblr}
 \end{table}
