--- a/misc/list-of-symbols.tex
+++ b/misc/list-of-symbols.tex
@@ -41,6 +41,7 @@
 \end{symbols}
 
 \begin{symbols}
+    HPC     & High Performance Computing
     PIP     & Python Index Package \\
     OpenBLAS & Optimized Basic Linear Algebra Subprograms \\
     DGEMM   & Double Precision General Matrix Multiply \\
